# pandas-plink

./: .appveyor.yml  .clang-format  .gitignore  .pre-commit-config.yaml  .travis.yml  1000G_example.ipynb  CHANGELOG.md  Example.ipynb  LICENSE.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  bed_reader_build.py  build_ext.py  conftest.py  oi.py  pgen.ksy  pyproject.toml  readthedocs.yml  requirements.txt  rtd-requirements.txt  setup.cfg  setup.py  version.py
.github/workflows/: build_wheels.yml  release.yml  test-and-deploy.yml  test.yml
doc/: .gitignore  Makefile  api.rst  conf.py  environment.yml  index.rst  install.rst  make.bat  requirements.txt  usage.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_modules/: index.html  pandas_plink.html
doc/_build/html/_modules/pandas_plink/: read.html  testit.html
doc/_build/html/_sources/: index.rst.txt
doc/api/: pandas_plink.Chunk.rst  pandas_plink.get_data_folder.rst  pandas_plink.read_grm.rst  pandas_plink.read_plink.rst  pandas_plink.read_plink1_bin.rst  pandas_plink.read_rel.rst  pandas_plink.test.rst  pandas_plink.write_plink1_bin.rst
pandas_plink/: __init__.py  _allele.py  _array.py  _bed_read.py  _bed_reader.c  _bed_reader.h  _bed_write.py  _bed_writer.c  _bed_writer.h  _builder.py  _chunk.py  _data.py  _filetype.py  _read.py  _read_grm.py  _read_rel.py  _test.py  _testit.py  _type.py  _util.py  _write.py  bed_read.py  bed_reader.py  builder.py  conftest.py  read.py  testit.py  timeit.py
pandas_plink/test/: test_gcta_grm.py  test_grm.py  test_pyplink.py  test_reader.py  test_rel.py  test_writer.py
pandas_plink/test/data_files/: chr11.bed  chr11.bim  chr12.bed  chr12.bim  data.bed  data.bim  data.fam
pandas_plink/test/data_files/grm-list/: Untitled.ipynb
pandas_plink/test/data_files/rel/: plink.rel
pandas_plink/test/data_files/rel-bin/: plink2.rel.id
pandas_plink/test/data_files/rel-zs/: plink2.rel.zst
tests/: test_reader.py  test_writer.py
tests/data_files/: chr11.fam  chr11.nosex
tests/data_files/grm-gz/: plink.grm.id
tests/data_files/grm-list/: plink2.grm
travis/: before_install_stage.sh  build_wheels.sh  deploy_wheels.sh  install_pandoc.sh  install_stage.sh  script_stage.sh
