[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Read PLINK files into Pandas data frames
download_url = https://github.com/limix/pandas-plink
keywords = plink, reader, genetics
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = pandas_plink
url = https://github.com/limix/pandas-plink
version = attr: version.get

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    cffi>=1.13.1
    pytest-runner>=5.2
install_requires =
    Deprecated>=1.2.6
    cffi>=1.13.1
    dask[array,dataframe]>=2.6.0
    numpy>=1.17.2
    pandas>=0.25.3
    pytest>=5.2.2
    tqdm>=4.36.1
    xarray>=0.13.0
    zstandard>=0.12.0

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
    --ignore="version.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject
doctest_optionflags = IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
pep8ignore = E402 E501

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[flake8]
ignore = E501 E741 E203 W503

[rstcheck]
ignore_substitutions = today, version
ignore_directives = plot,autofunction,command-output,autmodule,automodule,autoclass,testsetup,doctest,testcleanup,class,func
ignore_messages = Error in "math" directive
