[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Read PLINK files into Pandas data frames
download_url = https://github.com/limix/pandas-plink
keywords = plink, reader, genetics
license = MIT
license_file = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = pandas_plink
url = https://github.com/limix/pandas-plink
version = attr: version.get

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    cffi>=1.14.3
    wheel>=0.34.2
install_requires =
    Deprecated>=1.2.6
    cffi>=1.14.3
    dask[array,dataframe]>=2.6.0
    numpy>=1.17.2
    pandas>=1.1.3
    pytest>=5.2.2
    tqdm>=4.36.1
    xarray>=0.16.1
    zstandard>=0.13.0

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
    --ignore="version.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject
doctest_optionflags = IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE

[flake8]
ignore = E501 E741 E203 W503

[rstcheck]
ignore_substitutions = today, version
ignore_directives = class, plot, autofunction, autmodule, automodule, autoclass, autoattribute, automethod, doctest, testsetup, testcleanup
ignore_messages = Error in "math" directive
